[package]
name = "lysergic-tokenizer"
authors = ["Andrew Fraser<a@serfrae.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5.1", features = ["derive"] }
chrono = "0.4.38"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "2.0.1"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token = "6.0.0"
thiserror = "1.0.61"

[dev-dependencies]
solana-program-test = "2.0.1"

[lib]
name = "lyst"
crate-type = ["cdylib", "lib"]
